class Equipe_medica:
    def __init__(self, nome_medico, crm_medico, especializacao_medico, nome_enfermeiras):
        self._nome_medico = nome_medico
        self._crm_medico = crm_medico 
        self._especializacao_medico = especializacao_medico
        self._nome_enfermeiras = nome_enfermeiras
        