class Plano_saude:
    def __init__(self, nome_plano, tipo_plano, cobertura, num_cadastro):
        self._nome_plano = nome_plano
        self._tipo_plano = tipo_plano
        self._cobertura = cobertura 
        self._num_cadastro = num_cadastro